2007-04-27  Everaldo Canuto  <everaldo@simios.org>

	* MenuAPI.cs: When deactivate menu verify if hotkey (_) is active and redraw
	menu bar. It fixes some drawing issues in menu bar.

2007-04-27  Everaldo Canuto  <everaldo@simios.org>

	* MenuAPI.cs: Remove unneeded "keynav_state = KeyNavState.Idle" before 
	Deactivate calls, Deactivate method already do it. Also ser ActiveTracker
	when <alt> key is pressed.

2007-04-26  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11.cs: Simplify SystrayRemove to be like other libraries,	Gtk as 
	example just set visible to false and make this prevent from other problems.
	In SystrayAdd always remove pending expose. Fixes #81072.

2007-04-26  Marek Safar  <marek.safar@gmail.com>

	* TextBoxBase.cs (CaretMoved): Consider scroll maximum when scroll
	value is set.

2007-04-26  Alan McGovern <alan.mcgovern@gmail.com>

	* ListView.cs: Added three missing 2.0 events and corresponding
	EventHandlers. Added the OwnerDraw property.
	* DrawListViewColumnHeaderEventHandler.cs: fixed typo

2007-04-26  Alan McGovern <alan.mcgovern@gmail.com>

	* DrawListViewItemEventArgs.cs
	* DrawListViewSubItemEventArgs.cs: Brought classes up to 2.0 status.

2007-04-26  Alan McGovern <alan.mcgovern@gmail.com>

	* TextControl.cs: Fixed typo in constructor

2007-04-26  Jonathan Pobst  <monkey@jpobst.com>

	* Application.cs: Create a shortcut path so that currently selected
	MenuStrips can intercept keyboard events without having focus.
	* Control.cs: Handle WM_SYSCOMMAND message to activate MenuStrips.
	* MenuStrip.cs, ToolStrip.cs, ToolStripDropDown.cs, ToolStripDropDownItem.cs,
	ToolStripItem.cs, ToolStripManager.cs, ToolStripMenuItem.cs: Support
	keyboard navigation (arrows, tab, enter, esc) on Windows.  Still need to
	generate WM_SYSCOMMAND message in X11 for other platforms.
	* ToolStripProfessionalRenderer.cs: ToolStripMenuItems need to be painted
	in OnRenderMenuItemBackground instead of OnRenderButtonBackground.